package todolist.common;

public enum Command {
    ADD, REMOVE, EDIT, INIT, CLOSE
}
